<resources>
    <string name="app_name">NTSU Clifton : The Point</string>

    <!-- Admin: Event Overview -->
    <string name="act_event_overview_header">Event Overview</string>

    <string name="btn_new_event">Add New Event</string>

    <string name="dummy">Dummy</string>
    <string name="btn_card_edit_desc">Edit</string>
    <string name="btn_card_delete_desc">Delete</string>

    <!-- Admin: Event Forms -->
    <string name="form_event_title">Title</string>
    <string name="form_event_title_hint">Enter Title</string>
    <string name="form_event_promoter">Promoter (optional)</string>
    <string name="form_event_promoter_hint">Enter Promoter (optional)</string>
    <string name="form_event_date">Date</string>
    <string name="form_event_date_hint">Enter Date</string>
    <string name="form_event_desc">Description</string>
    <string name="form_event_desc_hint">Enter Description</string>
    <string name="form_event_fb_event">Facebook Event Page (optional)</string>
    <string name="form_event_fb_event_hint">Enter Facebook Event Page (optional)</string>
    <string name="form_event_price">Price</string>
    <string name="form_event_price_hint">Enter Price</string>
    <string name="form_event_ticket_url">Ticket URL (optional)</string>
    <string name="form_event_ticket_url_hint">Enter Ticket URL (optional)</string>

    <string name="form_event_cancel">Cancel</string>
    <string name="form_event_create">Create Event</string>
    <string name="form_event_update">Update Event</string>

    <!-- Navigation Drawer for Screen Readers -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Admin: Navigation Drawer -->
    <string name="nav_admin_events">Manage Events</string>
    <string name="nav_admin_user_area">Main App</string>

    <!-- User: Navigation Drawer -->
    <string name="nav_user_events">View Events</string>
    <string name="nav_user_gallery">View Gallery</string>
    <string name="nav_user_about_us">About Us</string>
    <string name="nav_user_contact_us">Contact Us</string>
    <string name="nav_user_admin_area">Admin Area</string>
    <string name="nav_user_header_socials">Socials</string>
    <string name="nav_user_instagram">Instagram</string>
    <string name="nav_user_twitter">Twitter</string>
    <string name="nav_user_facebook">Facebook</string>

    <!-- Navigation Drawer General -->
    <string name="the_point_logo">The Point (logo)</string>
    <string name="the_point_name">The Point - NTU Clifton SU</string>
    <string name="the_point_email">info@su.ntu.ac.uk</string>

    <!-- User Contact Form -->
    <string name="form_contact_name">Name</string>
    <string name="form_contact_name_hint">Enter Name</string>
    <string name="form_contact_email">Email</string>
    <string name="form_contact_email_hint">Enter Email</string>
    <string name="form_contact_subject">Subject</string>
    <string name="form_contact_subject_hint">Enter Subject</string>
    <string name="form_contact_message">Message</string>
    <string name="form_contact_message_hint">Enter Message</string>
    <string name="form_contact_send">Send Message!</string>

    <!-- About Us -->
    <string name="frag_about_header">About Us</string>

    <!-- User General -->
    <string name="search_event_hint">Search events…</string>
    <string name="event_facebook_link">View Facebook Event Page</string>
    <string name="event_google_calendar_link">Add to Google Calendar</string>
    <string name="get_directions_link">Get Directions</string>
</resources>
