<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_events"
            android:icon="@drawable/ic_edit"
            android:title="@string/nav_user_events" />
        <item
            android:id="@+id/nav_user_gallery"
            android:icon="@drawable/ic_edit"
            android:title="@string/nav_user_gallery" />
        <item
            android:id="@+id/nav_user_about_us"
            android:icon="@drawable/ic_edit"
            android:title="@string/nav_user_about_us" />
        <item
            android:id="@+id/nav_user_contact_us"
            android:icon="@drawable/ic_edit"
            android:title="@string/nav_user_contact_us" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_user_admin_area"
                android:icon="@drawable/ic_edit"
                android:title="@string/nav_user_admin_area" />
        </menu>
    </item>
</menu>