<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".admin.CreateEventActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fieldLabelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_event_title"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formEventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:hint="@string/form_event_title_hint"
                android:inputType="text"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelPromoter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_event_promoter"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formEventPromoter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:ems="10"
                android:hint="@string/form_event_promoter_hint"
                android:inputType="text"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_event_date"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:ems="10"
                android:hint="@string/form_event_date_hint"
                android:inputType="date|datetime"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_event_desc"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formEventDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:hint="@string/form_event_desc_hint"
                android:inputType="text"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelFBPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_event_fb_event"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formEventFbPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:ems="10"
                android:hint="@string/form_event_fb_event_hint"
                android:inputType="textUri"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_event_price"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formEventPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:ems="10"
                android:hint="@string/form_event_price_hint"
                android:inputType="numberDecimal"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelTicketURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_event_ticket_url"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formEventTicketURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:ems="10"
                android:hint="@string/form_event_ticket_url_hint"
                android:inputType="textUri"
                android:padding="4dp" />

            <EditText
                android:id="@+id/editTextEventId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/fakeView"
        android:layout_alignRight="@id/fakeView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorFailure"
        android:text="@string/form_event_cancel"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/buttonAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/fakeView"
        android:layout_alignLeft="@id/fakeView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorSuccess"
        android:text="@string/form_event_create"
        android:textColor="@color/colorWhite" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>
