<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".user.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fieldLabelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_contact_name"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:hint="@string/form_contact_name_hint"
                android:inputType="text"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_contact_email"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formContactEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:ems="10"
                android:hint="@string/form_contact_email_hint"
                android:inputType="textEmailAddress"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_contact_subject"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formContactSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:ems="10"
                android:hint="@string/form_contact_subject_hint"
                android:inputType="text"
                android:padding="4dp" />

            <TextView
                android:id="@+id/fieldLabelMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_contact_message"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/formContactMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/field_edit_text"
                android:gravity="top|start"
                android:hint="@string/form_contact_message_hint"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="3"
                android:padding="4dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSendMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorSuccess"
        android:text="@string/form_contact_send"
        android:textColor="@color/colorWhite" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>
