<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/dummy"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventTitle"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/dummy"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/image_edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/image_delete"
            android:layout_toLeftOf="@+id/image_delete"
            android:contentDescription="@string/btn_card_edit_desc"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/image_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/btn_card_delete_desc"
            android:src="@drawable/ic_delete" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
